client/src/index.scss
/* ... */
.icon {
    color: $tertiary-50 !important;
    width: 25px !important;
    height: 25px !important;
}

.icon-phone {
    width: 16px !important;
    height: 16px !important;
}

.icon-chat {
    width: 22px !important;
    height: 22px !important;
}

.message-form-preview {
    position: relative;
}

.message-form-icon-x {
    position: absolute;
    top: 0;
    right: 0;
    color: $primary-500 !important;
    width: 15px !important;
    height: 15px !important;
    cursor: pointer;
}

.message-form-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100px;
    gap: 8px;
}

.message-form {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 10px;
    border: 1px solid $primary-400 !important;
    border-radius: 5px !important;
    padding: 5px 15px 5px 20px !important;
    background: none;
    width: 80%;
}

.message-form-preview-image {
    width: 40px;
    height: 40px;
}

.message-form-input-container {
    flex-basis: 100%;
    position: relative;
    top: -10px;
}

.message-form-input,
.message-form-input:focus,
.message-form-input:active {
    all: unset;
    position: absolute;
    top: 0;
    left: 0;
    color: $tertiary-50 !important;
    z-index: 2 !important;
    width: 100% !important;
}

.message-form-assist {
    all: unset;
    width: 100% !important;
    position: absolute;
    top: 0;
    left: 0;
    color: $gray-300 !important;
    // background: transparent;
    z-index: 1;
}

.message-form-icon-airplane {
    color: $secondary-500 !important;
    width: 25px !important;
    height: 25px !important;
}

.message-form-icon-clip:hover,
.message-form-icon-airplane:hover {
    color: $secondary-800 !important;
    cursor: pointer;
}

.message-form-icon-clip {
    color: $primary-400 !important;
    width: 21px !important;
    height: 21px !important;
}

.message-form-icons {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 15px;
}

.vertical-line {
    height: 18px;
    border: 0.5px solid $primary-400 !important;
    display: inline-block;
}

/* CHAT LIST */
.ce-chat-list {
    overflow-y: hidden !important;
}

.header-text {
    margin: 10px 0 !important;
}

.ce-chat-list-column {
    background-color: $primary-600 !important;
    overflow-y: hidden !important;
    border-right: 1px solid $primary-400 !important;
}

.ce-chat-form {
    background-color: $primary-600 !important;
}

.ce-chat-form-title {
    top: 20px !important;
    font-family: "Rubik" !important;
    font-weight: bold !important;
    font-size: 24px !important;
}

.ce-chat-form-button {
    border: none !important;
    border-radius: 33px !important;
    color: $primary-600 !important;
    padding: 4px 15px !important;
    top: 15px !important;
}

.ce-chat-list {
    background-color: #12171b !important;
}

.ce-chat-card {
    border-radius: 0px !important;
    padding: 0px 20px !important;
    transition: background-color 0.3s ease;

    &:hover {
        background: $messege-body-hover !important;
    }
}

.ce-chat-card-title {
    top: 16px !important;
    font-family: "Rubik" !important;
}

.ce-chat-card-subtitle {
    bottom: 16px !important;
    color: $tertiary-100 !important;
    font-family: "Rubik" !important;
    font-weight: 300 !important;
}

.ce-chat-card-time-stamp {
    bottom: 16px !important;
    color: $gray-300 !important;
    font-family: "Rubik" !important;
    right: 16px !important;
}

.ce-active-chat-card {
    background: $active-messege-body !important;
    color: $tertiary-100 !important;
}

.ce-chat-card-unread {
    background-color: $quaternary-500 !important;
    right: 16px !important;
}

.ce-chat-card-avatar {
    left: 14px !important;
}

/* Chat Feed */
.ce-chat-feed-column {
    overflow-y: hidden !important;
    border: none !important;
}

.ce-chat-feed {
    background-color: $primary-700 !important;
}

.chat-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 10px 30px !important;
    border-bottom: 1px solid $primary-400 !important;
}

.ce-chat-header-title {
    font-family: "Rubik" !important;
    left: 68px !important;
}

.ce-chat-header-subtitle {
    font-family: "Rubik" !important;
}

.ce-chat-header {
    background-color: $primary-700 !important;
    color: $tertiary-50 !important;
    border-bottom: 1px solid $primary-400 !important;
    padding: 10px !important;
}

.ce-avatar-dot {
    background-color: $secondary-500 !important;
    margin: 5px 0 !important;
}

.ce-attachment-input {
    bottom: 4px !important;
    margin-left: 15px !important;
}

#ce-send-message-button {
    background-color: $secondary-300 !important;
    padding: 3px 10px !important;
    bottom: 5px !important;
}

.ce-attachment-icon {
    background-color: transparent !important;
    border: none !important;
}

.ce-message-list {
    background: $messege-body !important;
    height: calc((100% - 100px) - 68px) !important;
    border-bottom: 1px solid $primary-400 !important;
}
.ce-message-list::-webkit-scrollbar {
    width: 0px;
}
.ce-message-list::-webkit-scrollbar-track {
    background: $primary-800;
}

.ce-message-list::-webkit-scrollbar-thumb {
    background: $primary-800;
}

.ce-message-list::-webkit-scrollbar-track:hover {
    background: $primary-800;
}

.ce-message-list-content {
    padding: 20px !important;
    overflow-y: hidden !important;
}

.ce-message-date-text {
    font-family: "Rubik" !important;
    color: $gray-300 !important;
    font-size: 12px !important;
    margin: 10px 0 !important;
}

.ce-message-form {
    background-color: $primary-700 !important;
    border: 1px solid $primary-400 !important;
    border-radius: 5px !important;
    margin: 20px !important;
    width: calc(100% - 40px) !important;
}

.ce-message-form-input {
    background-color: $primary-700 !important;
    color: $tertiary-50 !important;
    font-family: "Rubik" !important;
    border: none !important;
}
/* ... */

